dart_sys/src/lib.rs


extern "C" {
    #[doc = " Acquires access to the internal data address of a TypedData object."]
    #[doc = ""]
    #[doc = " \\param object The typed data object whose internal data address is to"]
    #[doc = "    be accessed."]
    #[doc = " \\param type The type of the object is returned here."]
    #[doc = " \\param data The internal data address is returned here."]
    #[doc = " \\param len Size of the typed array is returned here."]
    #[doc = ""]
    #[doc = " Notes:"]
    #[doc = "   When the internal address of the object is acquired any calls to a"]
    #[doc = "   Dart API function that could potentially allocate an object or run"]
    #[doc = "   any Dart code will return an error."]
    #[doc = ""]
    #[doc = "   Any Dart API functions for accessing the data should not be called"]
    #[doc = "   before the corresponding release. In particular, the object should"]
    #[doc = "   not be acquired again before its release. This leads to undefined"]
    #[doc = "   behavior."]
    #[doc = ""]
    #[doc = " \\return Success if the internal data address is acquired successfully."]
    #[doc = "   Otherwise, returns an error handle."]
    pub fn Dart_TypedDataAcquireData(
        object: Dart_Handle,
        type_: *mut Dart_TypedData_Type,
        data: *mut *mut ::std::os::raw::c_void,
        len: *mut isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Releases access to the internal data address that was acquired earlier using"]
    #[doc = " Dart_TypedDataAcquireData."]
    #[doc = ""]
    #[doc = " \\param object The typed data object whose internal data address is to be"]
    #[doc = "   released."]
    #[doc = ""]
    #[doc = " \\return Success if the internal data address is released successfully."]
    #[doc = "   Otherwise, returns an error handle."]
    pub fn Dart_TypedDataReleaseData(object: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Returns the TypedData object associated with the ByteBuffer object."]
    #[doc = ""]
    #[doc = " \\param byte_buffer The ByteBuffer object."]
    #[doc = ""]
    #[doc = " \\return The TypedData object if no error occurs. Otherwise returns"]
    #[doc = "   an error handle."]
    pub fn Dart_GetDataFromByteBuffer(byte_buffer: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Invokes a constructor, creating a new object."]
    #[doc = ""]
    #[doc = " This function allows hidden constructors (constructors with leading"]
    #[doc = " underscores) to be called."]
    #[doc = ""]
    #[doc = " \\param type Type of object to be constructed."]
    #[doc = " \\param constructor_name The name of the constructor to invoke.  Use"]
    #[doc = "   Dart_Null() or Dart_EmptyString() to invoke the unnamed constructor."]
    #[doc = "   This name should not include the name of the class."]
    #[doc = " \\param number_of_arguments Size of the arguments array."]
    #[doc = " \\param arguments An array of arguments to the constructor."]
    #[doc = ""]
    #[doc = " \\return If the constructor is called and completes successfully,"]
    #[doc = "   then the new object. If an error occurs during execution, then an"]
    #[doc = "   error handle is returned."]
    pub fn Dart_New(
        type_: Dart_Handle,
        constructor_name: Dart_Handle,
        number_of_arguments: ::std::os::raw::c_int,
        arguments: *mut Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Allocate a new object without invoking a constructor."]
    #[doc = ""]
    #[doc = " \\param type The type of an object to be allocated."]
    #[doc = ""]
    #[doc = " \\return The new object. If an error occurs during execution, then an"]
    #[doc = "   error handle is returned."]
    pub fn Dart_Allocate(type_: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Allocate a new object without invoking a constructor, and sets specified"]
    #[doc = "  native fields."]
    #[doc = ""]
    #[doc = " \\param type The type of an object to be allocated."]
    #[doc = " \\param num_native_fields The number of native fields to set."]
    #[doc = " \\param native_fields An array containing the value of native fields."]
    #[doc = ""]
    #[doc = " \\return The new object. If an error occurs during execution, then an"]
    #[doc = "   error handle is returned."]
    pub fn Dart_AllocateWithNativeFields(
        type_: Dart_Handle,
        num_native_fields: isize,
        native_fields: *const isize,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Invokes a method or function."]
    #[doc = ""]
    #[doc = " The 'target' parameter may be an object, type, or library.  If"]
    #[doc = " 'target' is an object, then this function will invoke an instance"]
    #[doc = " method.  If 'target' is a type, then this function will invoke a"]
    #[doc = " static method.  If 'target' is a library, then this function will"]
    #[doc = " invoke a top-level function from that library."]
    #[doc = " NOTE: This API call cannot be used to invoke methods of a type object."]
    #[doc = ""]
    #[doc = " This function ignores visibility (leading underscores in names)."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param target An object, type, or library."]
    #[doc = " \\param name The name of the function or method to invoke."]
    #[doc = " \\param number_of_arguments Size of the arguments array."]
    #[doc = " \\param arguments An array of arguments to the function."]
    #[doc = ""]
    #[doc = " \\return If the function or method is called and completes"]
    #[doc = "   successfully, then the return value is returned. If an error"]
    #[doc = "   occurs during execution, then an error handle is returned."]
    pub fn Dart_Invoke(
        target: Dart_Handle,
        name: Dart_Handle,
        number_of_arguments: ::std::os::raw::c_int,
        arguments: *mut Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Invokes a Closure with the given arguments."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\return If no error occurs during execution, then the result of"]
    #[doc = "   invoking the closure is returned. If an error occurs during"]
    #[doc = "   execution, then an error handle is returned."]
    pub fn Dart_InvokeClosure(
        closure: Dart_Handle,
        number_of_arguments: ::std::os::raw::c_int,
        arguments: *mut Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Invokes a Generative Constructor on an object that was previously"]
    #[doc = " allocated using Dart_Allocate/Dart_AllocateWithNativeFields."]
    #[doc = ""]
    #[doc = " The 'target' parameter must be an object."]
    #[doc = ""]
    #[doc = " This function ignores visibility (leading underscores in names)."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param target An object."]
    #[doc = " \\param name The name of the constructor to invoke."]
    #[doc = "   Use Dart_Null() or Dart_EmptyString() to invoke the unnamed constructor."]
    #[doc = " \\param number_of_arguments Size of the arguments array."]
    #[doc = " \\param arguments An array of arguments to the function."]
    #[doc = ""]
    #[doc = " \\return If the constructor is called and completes"]
    #[doc = "   successfully, then the object is returned. If an error"]
    #[doc = "   occurs during execution, then an error handle is returned."]
    pub fn Dart_InvokeConstructor(
        object: Dart_Handle,
        name: Dart_Handle,
        number_of_arguments: ::std::os::raw::c_int,
        arguments: *mut Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the value of a field."]
    #[doc = ""]
    #[doc = " The 'container' parameter may be an object, type, or library.  If"]
    #[doc = " 'container' is an object, then this function will access an"]
    #[doc = " instance field.  If 'container' is a type, then this function will"]
    #[doc = " access a static field.  If 'container' is a library, then this"]
    #[doc = " function will access a top-level variable."]
    #[doc = " NOTE: This API call cannot be used to access fields of a type object."]
    #[doc = ""]
    #[doc = " This function ignores field visibility (leading underscores in names)."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param container An object, type, or library."]
    #[doc = " \\param name A field name."]
    #[doc = ""]
    #[doc = " \\return If no error occurs, then the value of the field is"]
    #[doc = "   returned. Otherwise an error handle is returned."]
    pub fn Dart_GetField(container: Dart_Handle, name: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Sets the value of a field."]
    #[doc = ""]
    #[doc = " The 'container' parameter may actually be an object, type, or"]
    #[doc = " library.  If 'container' is an object, then this function will"]
    #[doc = " access an instance field.  If 'container' is a type, then this"]
    #[doc = " function will access a static field.  If 'container' is a library,"]
    #[doc = " then this function will access a top-level variable."]
    #[doc = " NOTE: This API call cannot be used to access fields of a type object."]
    #[doc = ""]
    #[doc = " This function ignores field visibility (leading underscores in names)."]
    #[doc = ""]
    #[doc = " May generate an unhandled exception error."]
    #[doc = ""]
    #[doc = " \\param container An object, type, or library."]
    #[doc = " \\param name A field name."]
    #[doc = " \\param value The new field value."]
    #[doc = ""]
    #[doc = " \\return A valid handle if no error occurs."]
    pub fn Dart_SetField(
        container: Dart_Handle,
        name: Dart_Handle,
        value: Dart_Handle,
    ) -> Dart_Handle;
}

extern "C" {
    #[doc = " Throws an exception."]
    #[doc = ""]
    #[doc = " This function causes a Dart language exception to be thrown. This"]
    #[doc = " will proceed in the standard way, walking up Dart frames until an"]
    #[doc = " appropriate 'catch' block is found, executing 'finally' blocks,"]
    #[doc = " etc."]
    #[doc = ""]
    #[doc = " If an error handle is passed into this function, the error is"]
    #[doc = " propagated immediately.  See Dart_PropagateError for a discussion"]
    #[doc = " of error propagation."]
    #[doc = ""]
    #[doc = " If successful, this function does not return. Note that this means"]
    #[doc = " that the destructors of any stack-allocated C++ objects will not be"]
    #[doc = " called. If there are no Dart frames on the stack, an error occurs."]
    #[doc = ""]
    #[doc = " \\return An error handle if the exception was not thrown."]
    #[doc = "   Otherwise the function does not return."]
    pub fn Dart_ThrowException(exception: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Rethrows an exception."]
    #[doc = ""]
    #[doc = " Rethrows an exception, unwinding all dart frames on the stack. If"]
    #[doc = " successful, this function does not return. Note that this means"]
    #[doc = " that the destructors of any stack-allocated C++ objects will not be"]
    #[doc = " called. If there are no Dart frames on the stack, an error occurs."]
    #[doc = ""]
    #[doc = " \\return An error handle if the exception was not thrown."]
    #[doc = "   Otherwise the function does not return."]
    pub fn Dart_ReThrowException(exception: Dart_Handle, stacktrace: Dart_Handle) -> Dart_Handle;
}

extern "C" {
    #[doc = " Gets the number of native instance fields in an object."]
    pub fn Dart_GetNativeInstanceFieldCount(
        obj: Dart_Handle,
        count: *mut ::std::os::raw::c_int,
    ) -> Dart_Handle;
}
